--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/index.css" />
+    <title>Login</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="login-box">
+            <h2>Login</h2>
+            <input type="text" placeholder="Usuário" required />
+            <input type="password" placeholder="Senha" required />
+            <a href="pages/home.html">Entrar</a>
+        </div>
+    </div>
 </body>
+
 </html>
