--- a/pages/home.html
+++ b/pages/home.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
-    <title>Document</title>
+    <title>Home - Locação Aquática</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="logo">AquaRent</div>
+        <nav class="nav">
+            <a href="#servicos">Serviços</a>
+            <a href="#sobre">Sobre</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>
+
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Locação de Veículos Aquáticos</h1>
+            <p>Aproveite jet skis, lanchas e muito mais com segurança e qualidade.</p>
+            <button class="btn">Reservar Agora</button>
+        </div>
+    </section>
+
+
+    <section id="servicos" class="services">
+        <h2>Nossos Veículos</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>Jet Ski</h3>
+                <p>Modelos potentes e seguros para você se divertir.</p>
+            </div>
+            <div class="card">
+                <h3>Lancha</h3>
+                <p>Conforto e espaço para curtir com amigos.</p>
+            </div>
+            <div class="card">
+                <h3>Caiaque</h3>
+                <p>Experiência tranquila e esportiva na água.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <p>© 2025 AquaRent - Todos os direitos reservados.</p>
+    </footer>
 </body>
+
 </html>
