melhorando as contas

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,51 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
-    <title>Home - Locação Aquática</title>
+    <title>Aquatrip - Home</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">AquaRent</div>
-        <nav class="nav">
-            <a href="#servicos">Serviços</a>
-            <a href="#sobre">Sobre</a>
-            <a href="#contato">Contato</a>
-        </nav>
-    </header>
+    <div class="sidebar">
+        <div class="circle"></div>
+    </div>
 
 
-    <section class="hero">
-        <div class="hero-content">
-            <h1>Locação de Veículos Aquáticos</h1>
-            <p>Aproveite jet skis, lanchas e muito mais com segurança e qualidade.</p>
-            <button class="btn">Reservar Agora</button>
-        </div>
-    </section>
-
-
-    <section id="servicos" class="services">
-        <h2>Nossos Veículos</h2>
-        <div class="cards">
-            <div class="card">
-                <h3>Jet Ski</h3>
-                <p>Modelos potentes e seguros para você se divertir.</p>
+    <main class="content">
+        <header class="top-bar">
+            <div class="left-area">
+                <h1 class="logo">aquatrip</h1>
             </div>
-            <div class="card">
-                <h3>Lancha</h3>
-                <p>Conforto e espaço para curtir com amigos.</p>
-            </div>
-            <div class="card">
-                <h3>Caiaque</h3>
-                <p>Experiência tranquila e esportiva na água.</p>
-            </div>
-        </div>
-    </section>
 
 
-    <footer class="footer">
-        <p>© 2025 AquaRent - Todos os direitos reservados.</p>
-    </footer>
+            <nav class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#veiculos">Veículos</a>
+                <a href="#sobre">Sobre</a>
+                <a href="#contato">Contato</a>
+            </nav>
+
+
+            <div class="search-box">
+                <input type="text" placeholder="Buscar...">
+                <button>🔍</button>
+            </div>
+        </header>
+
+
+        <section class="carousel">
+            <button class="arrow left">◀</button>
+            <div class="carousel-content"></div>
+            <button class="arrow right">▶</button>
+        </section>
+
+
+        <button class="big-btn">Explorar Veículos</button>
+    </main>
 </body>
 
 </html>
