atualização de login

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Login</h2>
             <input type="text" placeholder="Usuário" required />
             <input type="password" placeholder="Senha" required />
-            <a href="pages/home.html">Entrar</a>
+            <a class="entrar" href="pages/home.html">Entrar</a>
         </div>
     </div>
 </body>
