Ajuste na tela de registro

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/registro.css">
-    <title>Document</title>
+    <title>Registro</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="register-box">
+            <h2>Criar conta</h2>
+
+            <div class="input-group">
+                <input type="text" required>
+                <label>Nome completo</label>
+            </div>
+
+            <div class="input-group">
+                <input type="email" required>
+                <label>E-mail</label>
+            </div>
+
+            <div class="input-group">
+                <input type="text" required>
+                <label>Usuário</label>
+            </div>
+
+            <div class="input-group">
+                <input type="password" required>
+                <label>Senha</label>
+            </div>
+
+            <div class="input-group">
+                <input type="password" required>
+                <label>Confirmar senha</label>
+            </div>
+
+            <a href="#" class="btn-register">Registrar</a>
+
+            <p class="login-link">
+                Já possui conta? <a href="/index.html">Entrar</a>
+            </p>
+        </div>
+    </div>
+
 </body>
+
 </html>
