Update imagens das lanchas e jetskis

--- a/pages/home.html
+++ b/pages/home.html
@@ -59,21 +59,21 @@
         <section class="vehicle-grid">
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1604079628040-943af71173a1" alt="Jet Ski">
+                <img src="https://motosurfing.com/upload/iblock/7f8/115g0o5q1neasb9bxxngyz4dzm2mye3d.jpg" alt="Jet Ski">
                 <h3>Jet Ski Yamaha FX</h3>
                 <p class="price">R$ 450 / hora</p>
                 <button class="card-btn">Alugar agora</button>
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1529692236671-f1dc28b1e20b" alt="Lancha">
+                <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/10/ce/47/b2.jpg" alt="Lancha">
                 <h3>Lancha FS 280</h3>
                 <p class="price">R$ 1.200 / hora</p>
                 <button class="card-btn">Alugar agora</button>
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1597571476381-5fbd8b7cbdeb" alt="Jet Ski">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
                 <h3>Sea-Doo GTX 300</h3>
                 <p class="price">R$ 550 / hora</p>
                 <button class="card-btn">Alugar agora</button>
