Criação botão logout

--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,9 @@
             <button>🔍</button>
         </div>
 
-        <button class="menu-btn">☰</button>
+        <button class="logout-btn" onclick="window.location.href='/'">Logout</button>
+
+        <button class=" menu-btn">☰</button>
     </header>
 
     <!-- MENU MOBILE -->
