Ajuste no botão registro para ir para a home

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -39,7 +39,7 @@
                 <label>Confirmar senha</label>
             </div>
 
-            <a href="#" class="btn-register">Registrar</a>
+            <a href="/pages/home.html" class="btn-register">Registrar</a>
 
             <p class="login-link">
                 Já possui conta? <a href="/index.html">Entrar</a>
