SOBRE OS VEICULOS MAIS PROCURADOS E IMAGENS

--- a/pages/home.html
+++ b/pages/home.html
@@ -48,14 +48,14 @@
         <section class="carousel">
             <button class="arrow left">◀</button>
             <div class="carousel-content">
-                <img src="https://images.unsplash.com/photo-1501556424050-d4816356b73e" alt="Jet Ski">
+                <img src="veiodalancha.jpg" alt="Jet Ski">
                 <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Lancha">
-                <img src="https://images.unsplash.com/photo-1508739773434-c26b3d09e071" alt="Passeio">
+                <img src="https://media-cdn.tripadvisor.com/media/attractions-splice-spp-674x446/14/b9/3c/a3.jpg" alt="Passeio">
             </div>
             <button class="arrow right">▶</button>
         </section>
 
-        <h2 class="section-title">Veículos Disponíveis</h2>
+        <h2 class="section-title">MAIS PROCURADOS</h2>
 
         <!-- GRID DE VEÍCULOS -->
         <section class="vehicle-grid">
