ajuste de valor e mudança da primeira img

--- a/pages/home.html
+++ b/pages/home.html
@@ -61,23 +61,25 @@
         <section class="vehicle-grid">
 
             <div class="card">
-                <img src="https://motosurfing.com/upload/iblock/7f8/115g0o5q1neasb9bxxngyz4dzm2mye3d.jpg" alt="Jet Ski">
-                <h3>Jet Ski Yamaha FX</h3>
-                <p class="price">R$ 450 / hora</p>
+                <img src="https://i.ytimg.com/vi/hlyZDIETkSo/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDNSI592zPBUyqi4TmoIVUi-051aQ" alt="Jet Ski">
+                <h3>Jjet ski seadoo gti se 2024</h3>
+                <p class="price">R$ 200 / hora</p>
                 <button class="card-btn">Alugar agora</button>
             </div>
 
             <div class="card">
                 <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/10/ce/47/b2.jpg" alt="Lancha">
                 <h3>Lancha FS 280</h3>
-                <p class="price">R$ 600 / hora</p>
+                <p class="price">R$ 300 / hora</p>
                 <button class="card-btn">Alugar agora</button>
             </div>
 
             <div class="card">
                 <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
-                <h3>Sea-Doo GTX 300</h3>
-                <p class="price">R$ 1200 / hora</p>
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
                 <button class="card-btn">Alugar agora</button>
             </div>
 
