--- a/pages/home.html
+++ b/pages/home.html
@@ -16,9 +16,9 @@
 
         <nav class="nav">
             <a href="#">Home</a>
-            <a href="#">Jet Skis</a>
-            <a href="#">Lanchas</a>
             <a href="#">Sobre</a>
+            <a href="#">Lanchas</a>
+            <a href="#">jet ski</a>
             <a href="#">Contato</a>
         </nav>
 
@@ -35,9 +35,9 @@
     <!-- MENU MOBILE -->
     <div class="mobile-menu">
         <a href="#">Home</a>
-        <a href="#">Jet Skis</a>
+        <a href="#">sobre</a>
         <a href="#">Lanchas</a>
-        <a href="#">Sobre</a>
+        <a href="#">Jet Skis</a>
         <a href="#">Contato</a>
     </div>
 
