--- a/pages/home.html
+++ b/pages/home.html
@@ -62,7 +62,7 @@
 
             <div class="card">
                 <img src="https://i.ytimg.com/vi/hlyZDIETkSo/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDNSI592zPBUyqi4TmoIVUi-051aQ" alt="Jet Ski">
-                <h3>Jjet ski seadoo gti se 2024</h3>
+                <h3>jet ski seadoo gti se 2024</h3>
                 <p class="price">R$ 340 / hora</p>
                 <button class="card-btn">Alugar agora</button>
             </div>
