--- a/pages/home.html
+++ b/pages/home.html
@@ -62,7 +62,7 @@
 
             <div class="card">
                 <img src="https://i.ytimg.com/vi/hlyZDIETkSo/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDNSI592zPBUyqi4TmoIVUi-051aQ" alt="Jet Ski">
-                <h3>jet ski seadoo gti se 2024</h3>
+                <h3>Jjet ski seadoo gti se 2024</h3>
                 <p class="price">R$ 340 / hora</p>
                 <button class="card-btn">Alugar agora</button>
             </div>
@@ -83,9 +83,64 @@
                 <button class="card-btn">Alugar agora</button>
             </div>
 
+            <div class="card">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
+                <button class="card-btn">Alugar agora</button>
+            </div>
+       
+<div class="card">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
+                <button class="card-btn">Alugar agora</button>
+            </div>
+
+<div class="card">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
+                <button class="card-btn">Alugar agora</button>
+            </div>
+
+<div class="card">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
+                <button class="card-btn">Alugar agora</button>
+            </div>
+
+<div class="card">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
+                <button class="card-btn">Alugar agora</button>
+            </div>
+
+<div class="card">
+                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
+                <h3>Sea-Doo GTX 300
+                    (com piloto incluso)
+                </h3>
+                <p class="price">R$ 1350 / dia </p>
+                <button class="card-btn">Alugar agora</button>
+            </div>
+
         </section>
 
-        <button class="big-btn">Ver todos os veículos</button>
+
+        <button onclick="window.location.href=''" class="big-btn">Ver todos os veículos</button>
     </main>
 
     <!-- FOOTER -->
@@ -106,3 +161,4 @@
 </body>
 
 </html>
+
