adicionei um novo documento e depois vou programar

--- a/pages/home.html
+++ b/pages/home.html
@@ -130,7 +130,7 @@
 
 <div class="card">
                 <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
-                <h3>Sea-Doo GTX 300
+                <h3>MARTIM MOHR
                     (com piloto incluso)
                 </h3>
                 <p class="price">R$ 1350 / dia </p>
