--- a/pages/home.html
+++ b/pages/home.html
@@ -129,8 +129,8 @@
             </div>
 
 <div class="card">
-                <img src="https://www.safetyyatchs.com.br/admin/image/lancha/149/1103lg.jpg" alt="Jet Ski">
-                <h3>MARTIM MOHR
+                <img src="https://media.licdn.com/dms/image/v2/D4D03AQH_cdCaXCy9uw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1662163362713?e=2147483647&v=beta&t=3FNlp9ObWx8A46tUIIgZjjNzPm2rfeATjxhaPbF7PFg" alt="Jet Ski">
+                <h3>AMANDINHA
                     (com piloto incluso)
                 </h3>
                 <p class="price">R$ 1350 / dia </p>
