--- a/pages/login.html
+++ b/pages/login.html
@@ -1,35 +1,40 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html> <html lang="pt-BR"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <link rel="stylesheet" href="/css/index.css" /> <title>Login</title> </head> <body> <div class="container"> <div class="login-box"> <h2>Entrar</h2> <div class="input-group"> <input type="text" required> <label>Usuário</label> </div> <div class="input-group"> <input type="password" required> <label>Senha</label> </div> <a class="btn-entrar" href="pages/home.html">Entrar</a> <p class="register"> Ainda não tem conta? <a href="/pages/registro.html">Criar agora</a> </p> </div> </div> </body> </html>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/index.css" />
-    <title>Login</title>
-</head>
 
-<body>
-    <div class="container">
-        <div class="login-box">
-            <h2>Entrar</h2>
 
-            <div class="input-group">
-                <input type="text" required>
-                <label>Usuário</label>
-            </div>
 
-            <div class="input-group">
-                <input type="password" required>
-                <label>Senha</label>
-            </div>
 
-            <a class="btn-entrar" href="pages/home.html">Entrar</a>
 
-            <p class="register">
-                Ainda não tem conta? <a href="/pages/registro.html">Criar agora</a>
-            </p>
-        </div>
-    </div>
-</body>
 
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
